# auto-chat

./: Cargo.toml  assist.txt  config.json  death.txt  readme.md  you_died.txt  you_killed.txt
src/: client.rs  keyboard_controller.rs  main.rs  parser.rs
