[package]
name = "auto-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
rand = "0.8.5"
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.147", features = ["derive"]}
tfc = "0.6.2"
tokio = {version = "1.21.2", features = ["full"]}
